# peerbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  deny.toml.bak  docker-compose.yml  mise.toml  rust-toolchain.toml
.github/workflows/: builds.yml  coverage.yml  docker.yml  helm.yml  release-plz.yml  release.yml  rust.yml  security.yml  test.yml
charts/peerbox/: Chart.yaml  values.yaml
charts/peerbox/templates/: NOTES.txt  _helpers.tmpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/chunking/: Cargo.toml
crates/chunking/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: download.rs  identity.rs  init.rs  mod.rs  peers.rs  status.rs  sync.rs  upload.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: application.rs  lib.rs
crates/core/src/services/: mod.rs  object_service.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  sqlite.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  core.rs  lib.rs  main.rs
crates/desktop/src/commands/: file_ops.rs  identity_ops.rs  mod.rs  sync_ops.rs
crates/desktop/src/platform/: native.rs
crates/desktop/src/state/: ui_state.rs
crates/desktop/src/views/: file_browser.rs  mod.rs  settings.rs  sync_dashboard.rs  upload.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/federation/: Cargo.toml
crates/federation/src/: activities.rs  actors.rs  federation_manager.rs  inbox.rs  lib.rs  objects.rs  outbox.rs  permissions.rs  webfinger.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: chunking.rs  download.rs  lib.rs  tests.rs  verification.rs
crates/objects/: Cargo.toml
crates/objects/src/: lib.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: connection.rs  discovery.rs  identity.rs  iroh_transport.rs  lib.rs  peer.rs  simulated.rs  tests.rs  transfer.rs  transport.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  routes.rs  state.rs  tests.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/verification/: Cargo.toml
crates/verification/src/: lib.rs
docs/: architecture.md  deployment.md  development.md  federation.md  p2p.md  security.md
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: integration.rs
