[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/objects",
    "crates/database",
    "crates/events",
    "crates/storage",
    "crates/crypto",
    "crates/federation",
    "crates/core",
    "crates/config",
    "crates/chunking",
    "crates/manifest",
    "crates/server",
    "crates/p2p",
    "crates/verification",
    "crates/cli",
    "crates/desktop",
    "tests",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

common = { path = "crates/common" }
objects = { path = "crates/objects" }
database = { path = "crates/database" }
events = { path = "crates/events" }
storage = { path = "crates/storage" }
crypto = { path = "crates/crypto" }
federation = { path = "crates/federation" }
config = { path = "crates/config" }
dc-core = { path = "crates/core" }
manifest = { path = "crates/manifest" }
chunking = { path = "crates/chunking" }
dc-server = { path = "crates/server" }
p2p = { path = "crates/p2p" }
verification = { path = "crates/verification" }
