[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
common = { workspace = true }
objects = { workspace = true }
database = { workspace = true }
events = { workspace = true }
storage = { workspace = true }
crypto = { workspace = true }
peerbox-core = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
