[package]
name = "dcc"
version = "0.1.0"
edition = "2021"
description = "Decentralized Cloud CLI"

[[bin]]
name = "dcc"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
dc-core = { workspace = true }
crypto = { workspace = true }
config = { workspace = true }
database = { workspace = true }
events = { workspace = true }
storage = { workspace = true }
objects = { workspace = true }
manifest = { workspace = true }
p2p = { workspace = true }
federation = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = "5"
bytes = "1"
hex = "0.4"
