[package]
name = "dc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
objects = { workspace = true }
database = { workspace = true }
events = { workspace = true }
storage = { workspace = true }
crypto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
