[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
