[package]
name = "database"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { workspace = true }
objects = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
