[package]
name = "federation"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
crypto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
