[package]
name = "manifest"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
blake3 = "1"
hex = "0.4"
