[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { workspace = true }
manifest = { workspace = true }
crypto = { workspace = true }
storage = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
