[package]
name = "peerbox-server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
peerbox-core = { workspace = true }
crypto = { workspace = true }
config = { workspace = true }
database = { workspace = true }
events = { workspace = true }
storage = { workspace = true }
objects = { workspace = true }
manifest = { workspace = true }
federation = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
hex = "0.4"
uuid = { workspace = true }
async-trait = { workspace = true }
tower = "0.5"
